tests/neg-macros/i13033/Test_2.scala
@main def test(): Unit =
  println(Macro.positive) // error
  println(Macro.negative) // error
